--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,16 +11,17 @@
 
     <filter-mapping>
         <filter-name>Auth</filter-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <servlet>
-        <servlet-name>LogOut</servlet-name>
-        <servlet-class>com.example.web_task_manager.servlet.LogOut</servlet-class>
-    </servlet>
+    <!--<servlet>
+      <servlet-name>LogOut</servlet-name>
+      <servlet-class>com.example.web_task_manager.servlet.LogOut</servlet-class>
+  </servlet>
 
-    <servlet-mapping>
-        <servlet-name>LogOut</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
+  <servlet-mapping>
+      <servlet-name>LogOut</servlet-name>
+      <url-pattern>/logout</url-pattern>
+  </servlet-mapping>-->
+
 </web-app>
