--- a/docker-compose-debug.yml
+++ b/docker-compose-debug.yml
@@ -17,7 +17,7 @@ services:
       - "8888:8080"
       - "8000:8000"
     volumes:
-      - ./target/web_task_manager-1.0-SNAPSHOT.war:/usr/local/tomcat/webapps/web_task_manager-1.0-SNAPSHOT.war
+      - ./target/:/usr/local/tomcat/webapps/
       - ./tomcat_logs:/usr/local/tomcat/logs
     links:
       - db
