--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "8888:8080"
     volumes:
-      - ./target/web_task_manager-1.0-SNAPSHOT.war:/usr/local/tomcat/webapps/web_task_manager-1.0-SNAPSHOT.war
+      - ./target/:/usr/local/tomcat/webapps/
       - ./tomcat_logs:/usr/local/tomcat/logs
     links:
       - db
