--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,10 +11,10 @@
 
     <filter-mapping>
         <filter-name>Auth</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </filter-mapping>
 
-    <!--<servlet>
+    <servlet>
       <servlet-name>LogOut</servlet-name>
       <servlet-class>com.example.web_task_manager.servlet.LogOut</servlet-class>
   </servlet>
@@ -22,6 +22,6 @@
   <servlet-mapping>
       <servlet-name>LogOut</servlet-name>
       <url-pattern>/logout</url-pattern>
-  </servlet-mapping>-->
+  </servlet-mapping>
 
 </web-app>
