--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,16 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.12</version>
         </dependency>
-    </dependencies>
+      </dependencies>
     <build>
         <plugins>
             <plugin>
