--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
+                <configuration>
+                    <outputDirectory>libs</outputDirectory>
+                </configuration>
             </plugin>
         </plugins>
-    </build>
-</project>
+    </build></project>
