--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
 
     <servlet-mapping>
         <servlet-name>TaskServlet</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/tasks</url-pattern>
     </servlet-mapping>
 
 </web-app>
