--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,16 @@
       <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+      <servlet-name>SignupServlet</servlet-name>
+      <servlet-class>com.example.web_task_manager.servlet.SignupServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>SignupServlet</servlet-name>
+      <url-pattern>/signup</url-pattern>
+  </servlet-mapping>
+
     <servlet>
         <servlet-name>TaskServlet</servlet-name>
         <servlet-class>com.example.web_task_manager.servlet.TaskServlet</servlet-class>
