--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.example</groupId>
     <artifactId>web_task_manager</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>web_task_manager</name>
+    <name>web_task_manager-1.0-SNAPSHOT</name>
     <packaging>war</packaging>
 
     <properties>
@@ -71,7 +71,13 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
-                    <outputDirectory>libs</outputDirectory>
+                    <outputDirectory>target</outputDirectory>
+                    <webResources>
+                        <resource>
+                            <directory>lib</directory>
+                            <targetPath>WEB-INF/lib</targetPath>
+                        </resource>
+                    </webResources>
                 </configuration>
             </plugin>
         </plugins>
