--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,14 @@
             <version>5.4.28.Final</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc</artifactId>
-            <version>14</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ojdbc8.jar</systemPath>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -72,12 +75,6 @@
                 <version>3.3.1</version>
                 <configuration>
                     <outputDirectory>target</outputDirectory>
-                    <webResources>
-                        <resource>
-                            <directory>lib</directory>
-                            <targetPath>WEB-INF/lib</targetPath>
-                        </resource>
-                    </webResources>
                 </configuration>
             </plugin>
         </plugins>
