--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,3 +5,5 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %5p %c{1} - %m%n
 
 log4j.rootLogger=debug, stdout
+
+log4j.logger.org.hibernate=info
