--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,25 +14,25 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-  <servlet>
-      <servlet-name>LoginServlet</servlet-name>
-      <servlet-class>com.example.web_task_manager.servlet.LoginServlet</servlet-class>
-  </servlet>
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.example.web_task_manager.servlet.LoginServlet</servlet-class>
+    </servlet>
 
-  <servlet-mapping>
-      <servlet-name>LoginServlet</servlet-name>
-      <url-pattern>/login</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
 
-  <servlet>
-      <servlet-name>SignupServlet</servlet-name>
-      <servlet-class>com.example.web_task_manager.servlet.SignupServlet</servlet-class>
-  </servlet>
+    <servlet>
+        <servlet-name>SignupServlet</servlet-name>
+        <servlet-class>com.example.web_task_manager.servlet.SignupServlet</servlet-class>
+    </servlet>
 
-  <servlet-mapping>
-      <servlet-name>SignupServlet</servlet-name>
-      <url-pattern>/signup</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SignupServlet</servlet-name>
+        <url-pattern>/signup</url-pattern>
+    </servlet-mapping>
 
     <servlet>
         <servlet-name>TaskServlet</servlet-name>
@@ -42,6 +42,16 @@
     <servlet-mapping>
         <servlet-name>TaskServlet</servlet-name>
         <url-pattern>/tasks</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserServlet</servlet-name>
+        <servlet-class>com.example.web_task_manager.servlet.UserServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>UserServlet</servlet-name>
+        <url-pattern>/user</url-pattern>
     </servlet-mapping>
 
 </web-app>
