added role for user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,11 @@ services:
       - "49161:1521"
       - "49162:8080"
   web:
-    image: tomcat:latest
+    image: jboss/wildfly
     ports:
       - "8888:8080"
     volumes:
-      - ./libs:/usr/local/tomcat/webapps/
-      - ./tomcat_logs:/usr/local/tomcat/logs
+#      - ./target:/opt/jboss/wildfly/standalone/deployments/
+      - ./libs:/opt/jboss/wildfly/standalone/deployments/
     links:
       - db
