--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,17 +41,27 @@
 
     <servlet-mapping>
         <servlet-name>TaskServlet</servlet-name>
-        <url-pattern>/tasks</url-pattern>
+        <url-pattern>/tasks/*</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>UserServlet</servlet-name>
+        <servlet-name>User</servlet-name>
         <servlet-class>com.example.web_task_manager.servlet.UserServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>UserServlet</servlet-name>
+        <servlet-name>User</servlet-name>
         <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Users</servlet-name>
+        <servlet-class>com.example.web_task_manager.servlet.UsersServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Users</servlet-name>
+        <url-pattern>/users</url-pattern>
     </servlet-mapping>
 
 </web-app>
